--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 title: Your New Jekyll Site
+published: true
 ---
 
 <div id="home" class="row">
   <div class="well">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+    <h4>In Conjunction with its Affiliated Hospitals, the Department of Laboratory Medicine and Pathology at the University of Minnesota Offers Outstanding Graduate Medical Education to Physicians from Around the World.</h4>
+
+<p>The Program's mission is to provide strong basic training in laboratory medicine and pathology and its subspecialties, including cytogenetics, cytopathology, hematopathology, molecular diagnostics, surgical pathology, transfusion medicine/cellular therapy, and basic science & clinical research.<p>
+
+<p>The Program's philosophic objective is to develop a sturdy medical knowledge/skill base and professional attributes that allow a resident/fellow to independently and competently practice pathology with a life-long commitment to continued learning and excellence.<p>
   </div>
 </div>
