--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Your New Jekyll Site
 published: true
 ---
 
-<div id="home">
+<div id="home" class="well">
 	<div class="row">
   		<div class="large-12 columns">
     		<h4>In Conjunction with its Affiliated Hospitals, the Department of Laboratory Medicine and Pathology at the University of Minnesota Offers Outstanding Graduate Medical Education to Physicians from Around the World.</h4>
