--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ published: true
   		</div>
 	</div>
 	<div class="row">
-      <div class="small-4 columns">
+      <div class="span4">
         
 Prospective Residents
 
