--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ published: true
 			<p>The Program's philosophic objective is to develop a sturdy medical knowledge/skill base and professional attributes that allow a resident/fellow to independently and competently practice pathology with a life-long commitment to continued learning and excellence.<p>
   		</div>
 	</div>
-	<div class="row">
+	<div class="row-fluid">
       <div class="span4">
         
 Prospective Residents
@@ -29,7 +29,7 @@ The Department provides four years of combined anatomic & clinical and three yea
 
 
       </div>
-      <div class="small-4 columns">
+      <div class="span4">
         
 
 Prospective Fellows
