--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ published: true
 ---
 
 <div id="home" class="well">
-	<div class="row">
+	<div class="row-fluid">
   		<div class="large-12 columns">
     		<h4>In Conjunction with its Affiliated Hospitals, the Department of Laboratory Medicine and Pathology at the University of Minnesota Offers Outstanding Graduate Medical Education to Physicians from Around the World.</h4>
 
