--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ published: true
 
 <div id="home" class="well">
 	<div class="row-fluid">
-  		<div class="large-12 columns">
+  		<div class="span12">
     		<h4>In Conjunction with its Affiliated Hospitals, the Department of Laboratory Medicine and Pathology at the University of Minnesota Offers Outstanding Graduate Medical Education to Physicians from Around the World.</h4>
 
 			<p>The Program's mission is to provide strong basic training in laboratory medicine and pathology and its subspecialties, including cytogenetics, cytopathology, hematopathology, molecular diagnostics, surgical pathology, transfusion medicine/cellular therapy, and basic science & clinical research.<p>
