--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ published: true
   		</div>
 	</div>
 	<div class="row-fluid">
-      <div class="span4">
+      <div class="span4 well">
         
 Prospective Residents
 
