--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ The Department provides four years of combined anatomic & clinical and three yea
 
 
       </div>
-      <div class="span4">
+      <div class="span4 well">
         
 
 Prospective Fellows
