--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@ published: true
 ---
 
 <div id="home">
-	<div class="row-fluid">
-  		<div class="span12 well">
-    		<h4>In Conjunction with its Affiliated Hospitals, the Department of Laboratory Medicine and Pathology at the University of Minnesota Offers Outstanding Graduate Medical Education to Physicians from Around the World.</h4>
+	<div class="row-fluid well">
+  		<h4>In Conjunction with its Affiliated Hospitals, the Department of Laboratory Medicine and Pathology at the University of Minnesota Offers Outstanding Graduate Medical Education to Physicians from Around the World.</h4>
 
 			<p>The Program's mission is to provide strong basic training in laboratory medicine and pathology and its subspecialties, including cytogenetics, cytopathology, hematopathology, molecular diagnostics, surgical pathology, transfusion medicine/cellular therapy, and basic science & clinical research.<p>
 
 			<p>The Program's philosophic objective is to develop a sturdy medical knowledge/skill base and professional attributes that allow a resident/fellow to independently and competently practice pathology with a life-long commitment to continued learning and excellence.<p>
-  		</div>
-	</div>
+  	</div>
 	<div class="row-fluid">
       <div class="col-md-4 well">
         
