--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ published: true
 			<p>The Program's mission is to provide strong basic training in laboratory medicine and pathology and its subspecialties, including cytogenetics, cytopathology, hematopathology, molecular diagnostics, surgical pathology, transfusion medicine/cellular therapy, and basic science & clinical research.<p>
 
 			<p>The Program's philosophic objective is to develop a sturdy medical knowledge/skill base and professional attributes that allow a resident/fellow to independently and competently practice pathology with a life-long commitment to continued learning and excellence.<p>
+      
+      <iframe width="560" height="315" style="float:right;padding:0px 0px 20px 20px;" src="//www.youtube.com/embed/SCmjJnLxH9w" frameborder="0" allowfullscreen></iframe>
   	</div>
 	<div class="row-fluid">
       <div class="col-md-4 well">
