--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ published: true
   	</div>
   <hr>
 	<div class="row-fluid">
-      <div class="col-md-4">
+      <div class="col-lg-4">
         
         <h3>Prospective Residents</h3>
 
