--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ published: true
 			<p>The Program's philosophic objective is to develop a sturdy medical knowledge/skill base and professional attributes that allow a resident/fellow to independently and competently practice pathology with a life-long commitment to continued learning and excellence.<p>
         </div>
       <div class="col-lg-6">
-      	<iframe width="560" height="315" style="float:right;" src="//www.youtube.com/embed/SCmjJnLxH9w" frameborder="0" allowfullscreen></iframe>
+      	<iframe width="560" height="315" src="//www.youtube.com/embed/SCmjJnLxH9w" frameborder="0" allowfullscreen></iframe>
       </div>
   	</div>
   <hr>
