--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ The Department provides four years of combined anatomic & clinical and three yea
 
 
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4">
         
 
         <h3>Prospective Fellows</h3>
@@ -54,7 +54,7 @@ Available Fellowships
 
 
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4">
         
 
         <h3>Current Residents</h3>
