--- a/index.html
+++ b/index.html
@@ -38,17 +38,19 @@ The Department provides four years of combined anatomic & clinical and three yea
 
         <h3>Prospective Fellows</h3>
 
-The Department of Laboratory Medicine and Pathology fellowship programs offer advanced training in different areas of anatomic and clinical pathology.
-Available Fellowships
-
-    Blood Banking and Transfusion Medicine Fellowship
-    Clinical Cytogenetics Fellowship
-    Clinical Chemistry Fellowship
-    Cytopathology Fellowship
-    Forensic Pathology Fellowship
-    Hematopathology Fellowship
-    Molecular Genetic Pathology Fellowship
-    Surgical Pathology Fellowship
+        <p>The Department of Laboratory Medicine and Pathology fellowship programs offer advanced training in different areas of anatomic and clinical pathology.</p>
+        <p>Available Fellowships:
+		<ul>
+  			<li>Blood Banking and Transfusion Medicine Fellowship</li>
+    		<li>Clinical Cytogenetics Fellowship</li>
+    		<li>Clinical Chemistry Fellowship</li>
+    		<li>Cytopathology Fellowship</li>
+    		<li>Forensic Pathology Fellowship</li>
+    		<li>Hematopathology Fellowship</li>
+    		<li>Molecular Genetic Pathology Fellowship</li>
+    		<li>Surgical Pathology Fellowship</li>
+        </ul>
+      </p>
 
 
 
