--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ published: true
         
         <h3>Prospective Residents</h3>
 
-The Department provides four years of combined anatomic & clinical and three years of anatomic or clinical pathology only residency training to its physicians-in-training who continually make successful academic progress towards the independent practice of laboratory medicine and pathology.
+        <p> Department provides four years of combined anatomic & clinical and three years of anatomic or clinical pathology only residency training to its physicians-in-training who continually make successful academic progress towards the independent practice of laboratory medicine and pathology.</p>
 
     Program Overview
     Applying
