adding directory for file assets; listing training sites

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 title: Residency and Fellowship Programs
 published: true
 ---
-
+    <div class="row">
       <div class="col-lg-5">
-        <h4>In Conjunction with its Affiliated Hospitals, the Department of Laboratory Medicine and Pathology at the University of Minnesota Offers Outstanding Graduate Medical Education to Physicians from Around the World.</h4>
+        <h4>In Conjunction with its Affiliated Hospitals, the <a href="http://pathology.umn.edu">Department of Laboratory Medicine and Pathology</a> at the University of Minnesota Offers Outstanding Graduate Medical Education to Physicians from Around the World.</h4>
 
         <p>The Program's mission is to provide strong basic training in laboratory medicine and pathology and its subspecialties, including cytogenetics, cytopathology, hematopathology, molecular diagnostics, surgical pathology, transfusion medicine/cellular therapy, and basic science & clinical research.<p>
 
@@ -13,9 +13,21 @@ published: true
       </div>
       <div class="col-lg-5">
         <div class="video-container">
-          <iframe width="560" height="315" src="//www.youtube.com/embed/SCmjJnLxH9w" frameborder="0" allowfullscreen></iframe>
+          <iframe src="//www.youtube.com/embed/SCmjJnLxH9w" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-4" id="prospective-residents">
+            <h3>Prospective Residents</h3>
+        </div>
+        <div class="col-lg-4" id="prospective-fellows">
+            <h3>Prospective Fellows</h3>
+        </div>
+        <div class="col-lg-4" id="current-residents">
+            <h3>Current Residents</h3>
+        </div>
+    </div>
       
       
   	
