--- a/prospective_fellows/index.html
+++ b/prospective_fellows/index.html
@@ -11,4 +11,5 @@ published: true
 
 <p>The general goal of the fellowship programs is to instill expertise in different areas of anatomic and clinical pathology, ensuring trainees that will become leaders in their field and who will excel either in community practice or in academic pathology. Fellowships provide the credits for subspecialty board certification examinations, where applicable.</p>
 
+<h3>Available Fellowships:</h3>
 {% include fellowship_list.html %}
