removing jekyll-assets

--- a/prospective_fellows/index.html
+++ b/prospective_fellows/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Prospective Fellows
 published: true
 ---
-<img src="{% asset_path fellow_scanscope.jpg %}" class="thumbnail pull-right">
+<img src="{{site.baseurl}}/images/fellow_scanscope.jpg" class="thumbnail pull-right">
 
 <p>The Department of Laboratory Medicine and Pathology fellowship programs offer advanced training in different areas of anatomic and clinical pathology. Fellows have responsibilities that are intermediate between those of a resident and a staff pathologist. They are supervised as necessary by staff pathologists, who approve and sign all diagnoses. However, they have considerable freedom in working up cases, and elaborating preliminary diagnoses before the cases are reviewed and discussed with the staff pathologists. Fellows gain considerable experience in interacting as a consultant and discussing cases with clinical and surgical colleagues. Additional training is provided through intra- and interdepartmental conferences for which fellows are responsible. Fellows also attend intradepartmental teaching conferences and interdepartmental conferences, according to the specialty.</p>
 
