fellowship description clean-up

--- a/current/index.html
+++ b/current/index.html
@@ -2,9 +2,7 @@
 title: Current Residents and Fellows 
 layout: default
 ---
-
-<h2>Current Residents and Fellows</h2>
-
+<!-- Left Column: Links -->
 <div class="col-lg-5">
 
 <h4><a href="profiles/">Our Residents and Fellows</a></h4>
@@ -35,6 +33,7 @@ layout: default
 </ul>
 </div>
 
+<!-- Right Column: Calendar -->
 <div class="col-lg-5">
 <h3> Upcoming Events </h3>
 {% include residency_events.html %}
